feat(*): last up
Signed-off-by: hansputera <hanifdwyputrasembiring@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@fontsource/roboto": "^5.0.13",
+    "@iconify-json/ri": "^1.1.21",
     "@swup/astro": "^1.4.1",
     "astro": "^4.12.2",
     "astro-compress": "^2.3.0",
